--- a/prj_dw/models/staging/_stg_models.yml
+++ b/prj_dw/models/staging/_stg_models.yml
@@ -81,6 +81,4 @@ models:
       - name: etl_inserted_at
         description: "Timestamp de quando o dado foi carregado no modelo"
 
-  - name: stg_cadastros_2
-
-  - name: stg_luciano
+  - name: stg_amoras
