--- a/prj_dw/packages.yml
+++ b/prj_dw/packages.yml
@@ -1,6 +1,8 @@
 packages:
-  - package: dbt-labs/dbt_utils
-    version: "1.3.0"
+  - name: dbt_utils
+    package: dbt-labs/dbt_utils
+    version: 1.3.0
 
-  - package: metaplane/dbt_expectations
-    version: "0.10.8"
+  - name: dbt_expectations
+    package: calogica/dbt_expectations
+    version: 0.10.8
