--- a/prj_dw/packages.yml
+++ b/prj_dw/packages.yml
@@ -1,8 +1,6 @@
 packages:
-  - name: dbt_utils
-    package: dbt-labs/dbt_utils
+  - package: dbt-labs/dbt_utils
     version: 1.3.0
 
-  - name: dbt_expectations
-    package: calogica/dbt_expectations
+  - package: calogica/dbt_expectations
     version: 0.10.8
